// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Entry/InputSearch Default smoke-test 1`] = `
<div class="_input-search_1w78h_325">
  <input type="text"
         placeholder="タイトル検索"
         class="_input-search__input_1w78h_328 _input-search__input--medium_1w78h_337"
  >
  <button type="submit"
          title="search"
          class="_input-search__button_1w78h_343"
  >
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 512 512"
         class="_input-search__icon_1w78h_356"
    >
      <path fill="currentColor"
            d="M416 208c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208M208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288"
      >
      </path>
    </svg>
  </button>
</div>
`;

exports[`Data Entry/InputSearch Large smoke-test 1`] = `
<div class="_input-search_1w78h_325">
  <input type="text"
         placeholder="タイトル検索"
         class="_input-search__input_1w78h_328 _input-search__input--large_1w78h_340"
  >
  <button type="submit"
          title="search"
          class="_input-search__button_1w78h_343"
  >
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 512 512"
         class="_input-search__icon_1w78h_356"
    >
      <path fill="currentColor"
            d="M416 208c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208M208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288"
      >
      </path>
    </svg>
  </button>
</div>
`;

exports[`Data Entry/InputSearch Small smoke-test 1`] = `
<div class="_input-search_1w78h_325">
  <input type="text"
         placeholder="タイトル検索"
         class="_input-search__input_1w78h_328 _input-search__input--small_1w78h_334"
  >
  <button type="submit"
          title="search"
          class="_input-search__button_1w78h_343"
  >
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 512 512"
         class="_input-search__icon_1w78h_356"
    >
      <path fill="currentColor"
            d="M416 208c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208M208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288"
      >
      </path>
    </svg>
  </button>
</div>
`;
